review: 001-006, Unit 19-2, Unit 20-1

--- a/english/word/low-frequency/001-006.md
+++ b/english/word/low-frequency/001-006.md
@@ -1,4 +1,4 @@
-# 001-008
+# 001-006
 
 - 感情色彩正向: 🙂
 - 感情色彩负向: 😔
@@ -19,62 +19,62 @@
 
 ## 001
 
-- expire
+- expire [ɪkˈspaɪər]
     - vi.（正式文件）到期
     - -spir- 气
-    - Aspire to inspire before we expire.
+    - Aspire to inspire before we **expire**.
     - inspire vt. 鼓舞；激励；是...的灵感来源；使产生（情感）
     - aspire v. 渴望
-- mentality
+- mentality [menˈtæləti]
     - n. 心态
     - mental health
 - bend
     - v. 使倾斜
-- uncrowded
+- uncrowded [ʌnˈkraʊdɪd]
     - adj. 不拥挤的
 - unsurpassed
     - adj. 无比的，卓越的
-    - Rested in the Pacific Ocean, Mauua Kea's peak <ins>rises above(高于、超出)</ins>
-      <ins>the bulk of(...的大部分)</ins> our *planet(n. 行星)*'s <ins>dense atmosphere(稠密的大气)</ins>, where
+    - Rested in the Pacific Ocean, Mauua Kea's peak rises above the bulk of our planet's dense atmosphere, where
       conditions allow telescopes to obtain images of **unsurpassed** clarity.
 - elevation
     - n. 提升
     - elevator n. 电梯
-- attorney
+- attorney [əˈtɜːrni]
     - n. 律师
     - lawyer n. 律师
 - fluency
     - n.（语言）流利
-- reversible
+- reversible [rɪˈvɜrsəbl]
     - adj. 可逆的
 - guesswork
     - n. 猜测
 
 ## 002
 
-- horrified
+- horrified [ˈhɔrəˌfaɪd]
     - adj. 惊吓的
-- thrift
+- thrift [θrɪft]
     - n. 节省
     - **Thrift** means being very careful about how much money you spend.
     - **Thrift** has become the prevailing practice.
-- unflattering
+- unflattering [ʌnˈflætərɪŋ]
     - adj. 贬损的 😔
-    - Facebook is a self-enhancer's paradise because people can <ins>withhold (隐瞒)</ins> their unflattering sides.
-    - flattered 感到满意的，受宠若惊的
+    - Facebook is a self-enhancer's *paradise([ˈpærədaɪs])* because people can withhold their **unflattering** sides.
+    - flattered ['flætəd] adj. 感到满意的，受宠若惊的
 - disbelief
     - n. 怀疑
 - shorthand
     - n. 速记（法）
-- inequity
+- inequity [ɪnˈɛkwɪti]
     - n. 不公正 😔
     - Social imbalance worries him more than **inequity** of income.
+        - sth worries sb 某事让某人担忧
 - craftsman
     - n. 工匠
     - craftsmanship spirit 工匠精神
-- verbally
+- verbally [ˈvɜrbəli]
     - adv. 口头地
-- bloody
+- bloody [ˈblʌdi]
     - vt. 使流血
 - withstand
     - vt. 承受 😔
@@ -82,115 +82,117 @@
 
 ## 003
 
-- sip
+- sip [sɪp]
     - v. 小口的喝
     - take a sip 浅尝一口
 - usage
     - n. 使用
-- usefulness
-    - n. 有用
+    - usefulness n. 有用
 - dentistry
     - n. 牙科学
     - dentist [ˈdentɪst] n. 牙科医生
 - dissatisfied
     - adj. 不满意的
     - be dissatisfied with 对...不满意
-- preside
+- preside [prɪˈzaɪd]
     - vi. 负责
     - preside over 负责...
 - anticipation
     - n. 预期
-- apprehension
+- apprehension [ˌæprɪˈhɛnʃən]
     - n. 理解
     - comprehension [ˌkɑːmprɪˈhenʃn] n. 理解
-- aggressively
+- aggressively [əˈɡrɛsɪvlɪ]
     - adv. 挑衅的
     - aggressive [əˈɡresɪv] adj. 好强的🙂; 攻击性强的 😔
     - aggressiveness n. 进取精神
 
 ## 004
 
-- drone
+- drone [droʊn]
     - n. 无人机；雄蜂
     - invisible drone 隐形战机
-- fertiliser
+- fertiliser ['fɜtɪlaɪzə]
     - n. 肥料
     - artificial fertiliser 人造肥料
-- swell
+- swell [swel]
     - v. 使增多
     - n. 肿胀
 - tribute
     - n. 贡品
 - confusedly
     - adv. 混乱地
-- confusion
-    - n. 混乱
+    - confusion n. 混乱
 - uneven
     - adj. 不均匀的，不平坦的，不平等的
-    - an even playing field 一个公平的竞技场
     - even
         - adv. 甚至
         - adj. 均匀的；公平的
-- mammal
+        - an even playing field 一个公平的竞技场
+- mammal [ˈmæml]
     - n. （脊椎）哺乳动物
 - unworthy
     - adj. 不值得的
     - be unworthy of sth.
 - enormously
     - adv. 非常
+    - enormous [ɪˈnɔːrməs] adj. 巨大的
 
 ## 005
 
-- chronological
+- chronological [ˌkrɑːnəˈlɑːdʒɪkl]
     - adj. 按时间计算的
-- moderately
+- moderately [ˈmɑːdərətli]
     - adv. 适度地
     - Share prices on the Tokyo Exchange declined **moderately**.
-- occasional
+- occasional [əˈkeɪʒənl]
     - adj. 偶然的
     - == from time to time
     - I enjoy the **occasional** glass of wine.
 - multidimensional
     - adj. 多维的
-- stubbornly
+- stubbornly [ˈstʌbɚnɪ]
     - adv. 顽固地
 - landmark
     - n. 里程碑
     - In the **landmark** 1975 decision Taylor v. Louisiana, the Supreme Court extended the requirement that juries be
       representative of all parts of the community to the state level.
         - extend A to B 延伸到
-- formative
+- formative [ˈfɔːrmətɪv]
     - adj. 对成长有深远影响的
-- fatal
+- fatal [ˈfeɪtl]
     - adj. 致命的
-- portable
+- portable [ˈpɔːrtəbl]
     - adj. 便携式的
-- disciplinary
+- disciplinary [ˈdɪsəpləneri]
     - adj. 学科的；纪律的
-    - The school has a reputation for high standards of **discipline**.
     - Our weekly reading groups provided another chance for discussing multi-**disciplinary** ideas.
+    - discipline [ˈdɪsəplɪn]
+        - v. 训练; 惩罚; 自我约束
+        - n. 自制力；学科；行为准则
+        - The school has a reputation for high standards of **discipline**.
 
 ## 006
 
-- renovation
+- renovation [ˌrenə'veɪʃn]
     - n. 整修
-- misrepresent
+- misrepresent [mɪsˌrɛprɪˈzɛnt]
     - vt. 歪曲
 - procedurally
     - adv. 在程序上
     - procedure n. 手续；（商业、法律或政治上的）程序
-- grace
+- grace [ɡreɪs]
     - n. 优雅
     - elegance n. 优雅
     - **Grace** commonly refers to a smooth and pleasing way of moving, or a polite and thoughtful way of behaving.
     - She does everything with <ins>style and **grace**(优雅得体)</ins>.
-- narrative
+- narrative [ˈnærətɪv]
     - n. 叙事
 - mightily [ˈmaɪtli]
     - adv. 非常
-    - He had given a **mightily** imoressive performance.
+    - He had given a **mightily** impressive performance.
     - That framework has contributed **mightily** to our broken immigration system.
-- ironically
+- ironically [aɪˈrɑːnɪkli]
     - adv. 讽刺地
     - ironic [aɪˈrɑnɪk] adj. 反语的；讽刺的
 - readmit
@@ -201,60 +203,8 @@
         - adv. 单独地
         - The hotel has 100 **individually** designed bedrooms.
 
-## 007
+## Words
 
-- decider
-    - n. 决定者
-    - decide [dɪˈsaɪd] v. 决定
-    - decisive
-        - adj. 决定性的; 明确的; 决断的
-        - This is a time of **decisive** action and quick thinking.
-- agonizing
-    - adj. 令人痛苦的
-    - It was the most **agonizing** decision of her life.
-    - agony
-        - n. 痛苦
-        - == pain
-- livestream
-    - n. 网络直播
-- tick
-    - vt. 打钩
-- shrewd
-    - adj. 精明的
-- veteran
-    - n. 老兵
-- irregular
-    - adj. 无规律的
-    - We never engage in **irregularities**. 我们决不搞歪的斜的
-    - regularity n. 规律性
-- noisiness
-    - n. 吵闹
-- manifestation
-    - n. 表现
-    - Some **manifestation** of your concern would have been appreciated.
+## 词组
 
-## 008
-
-- perfection
-    - n. 完善
-- inbox
-    - n. 收件箱
-- partial
-    - adj. 部分的
-    - biased
-        - adj. 偏见的
-        - unbiased 🙂 [ʌnˈbaɪəst] adj. 无偏见的；公正的
-    - partiality n. 不公平
-        - favoritism ['feɪvərɪtˌɪzəm] n. 偏袒
-    - impartially adv. 公平地
-- inventor
-    - n. 发明者
-- advisory
-    - adj. 顾问的
-    - Giovanni Parmigiani, a biostatistician at the Harvard School of Public Health, a member of the SBoRE group, says
-      he expects the board to "play primarily an **advisory** role".
-- consultant
-    - n. 顾问
-    - consultancy n. 咨询公司
-- multibillion
-    - adj. 数十亿的
+## 句式
