--- a/math/advanced-mathematics/Limits-and-Continuity-of-Functions/Computation-of-Function-Limits.tex
+++ b/math/advanced-mathematics/Limits-and-Continuity-of-Functions/Computation-of-Function-Limits.tex
@@ -106,7 +106,6 @@
             \lim_{x\to \infty} \frac{f'(x)}{F'(x)}.
         \]
         \item \textbf{洛必达法则二（$\color{red}{\dfrac{\infty}{\infty}}$ 型）}
-
         设当
         \[
             x \to a \quad \text{或} \quad x \to \infty
@@ -145,6 +144,7 @@
         \item \textbf{泰勒公式}: 设$f(x)$在点$x = a$处$n$阶可导，则存在$x = a$的一个邻域，对于该邻域内的任一点$x$，有
         \[
             f(x) = f(a) + f'(a)(x-a) + \frac{f''(a)}{2!}(x-a)^2
+            + \cdots +
             + \frac{f^{(n)}(a)}{n!}(x-a)^n + o(x^n)
         \]
         \begin{itemize}
