--- a/english/word/low-frequency/013-018.md
+++ b/english/word/low-frequency/013-018.md
@@ -1,4 +1,4 @@
-# 009-016
+# 013-018
 
 - 感情色彩正向: 🙂
 - 感情色彩负向: 😔
@@ -16,133 +16,6 @@
 - 破折号: —
 - C: Cause
 - R: Result
-
-## 009
-
-- vastly
-    - adv. 非常
-- empathy
-    - n. 同理心，共鸣，同情；感同身受
-    - Besides, **empathy** can be a cure for loneliness and sadness.
-    - sympathy
-        - n. 支持，赞同；同情
-        - I have some **sympathy** with this <ins>point of view(观点)</ins>.
-- hedge
-    - vi. 防备（尤指金钱损失）
-    - The Bilski case involves a claimed patent on a method for <ins>**hedging** risk(对冲风险)</ins> in the energy
-      market.
-- suicide
-    - n. 自杀
-    - commit suicide
-- quickness
-    - n. 机智
-- entrepreneurship
-    - n. 创业精神
-    - **Entrepreneurship** has risks. Startups do fail.
-- erroneous
-    - adj. （观念或资料）错误的
-    - Proper measures were taken as soon as the **erroneous** ideas cropped up.
-    - error n. 错误，差错
-- appropriately
-    - adv. 适当的
-    - == proper
-- unpredictable
-    - adj. 不可预测的
-- wherever
-    - conj. 各处，在任何地方
-
-## 010
-
-- unsustainability
-    - n. 不可持续性
-    - In a world of scare resources, globalization without new technology is unsustainable.
-    - sustainable development 可持续发展
-- inability
-    - n. 无力
-    - in inability to do sth. 无力做某事
-- fascination
-    - n. 迷恋
-    - == obsession n. 迷恋 😔
-- scrap
-    - vt. 抛弃
-    - n. 碎片
-- apt
-    - adj. 有...倾向
-    - be apt to do 倾向于
-        - == tend to do sth 倾向于做某事
-        - == be likely to do sth.
-    - She was **apt** to raise her voice and wave her hands about.
-    - She had taught him French and he had been an <ins>**apt**(adj. 聪慧的)</ins> students.
-- culprit
-    - n. 引起问题的人（或事物）；罪犯
-    - The police followed home the clue and finally caught the **culprit**.
-    - Financial needs aren't the only **culprit/reason/cause** for the "unretirement" trend.
-- flexibly
-    - adv. 灵活地
-- rectify
-    - vt. 纠正
-- performative
-    - adj. 表述行为的
-- explode
-    - vi. 激增
-
-## 011
-
-- distinctively
-    - adv. 独特地
-    - == unique
-- theorise
-    - v. 提出理论
-    - theoretical adj. 理论上的
-- experimentation
-    - n. 实验
-- disapprove
-    - vi. 不赞成
-    - disapprove/approve of sth.
-    - approve
-        - vi. 同意
-        - vt. 批准
-- duration
-    - n. 持续时间
-- prudence
-    - n. 谨慎
-    - consider the pros and cons.
-    - **Prudence** is the virtue by which we discern what is proper to do under various circumstances in time and place.
-    - prudently adv. 谨慎地
-- needlessness
-    - n. 不必要
-- ancestral
-    - adj. 祖先的
-    - ancestor n. 祖先
-
-## 012
-
-- idealist
-    - n. 理想主义者
-    - ideally adv. 理想地
-    - idealism
-        - n. 理想主义
-        - **Idealism** leads to realism if it is strictly thought out.
-    - When you're idealistic, you dream of perfection, whether in yourself or other people.
-        - optimism n. 乐观主义
-- input
-    - vt. 把（数据等）输入计算机
-- instability
-    - n. （形势）不稳定
-- spacecraft
-    - n. 宇宙飞船
-- continental
-    - adj. 大陆的
-- unrecognized
-    - adj. 未被意识到的
-    - The trend in sports,though, may be obscuring an **unrecognized** reality: Americans have generally stopped
-      growing.
-        - obscure adj. 鲜为人知的；费解的
-- instructive
-    - adj. 有启发性的
-    - instruct sb. to do sth.
-- discoverer
-    - n. 发现者
 
 ## 013
 
@@ -261,6 +134,70 @@
 - telecommunication
     - n. 电讯
 
+## 017
+
+- precise
+    - adj. 精确的
+    - == exact adj. 精确的，准确的
+- stereotyped
+    - adj. 固定不变的
+    - a stereotyped mind 刻板的思想
+    - There is a sameness about all these tales，they're so **stereotyped**—all about
+      <ins>talented scholars and lovely ladies(才子佳人)</ins>. 这些书就是一套子，左不过是写才子佳人，最没趣儿
+- worrisome
+    - adj. 令人担心的
+- lawless
+    - adj. 不守法的
+    - lawmaker n. 立法者
+- denote
+    - vt. 意指
+- modernism
+    - n. 现代主义
+    - modernization n. 现代化
+- unresponsive
+    - adj. 无反应的
+    - respond
+        - v. （口头或书面）回答；
+        - vi. 做出反应
+        - respond to sth.
+- deceptiveness
+    - n. 欺骗
+    - deceptive
+        - adj. 欺骗性的; 误导的
+        - Looks can be **deceptive**.
+
+## 018
+
+- anecdote
+    - n. 轶事
+    - This research is based on **anecdote** not fact.
+    - anecdotal adj. 传闻的
+        - Opposite: fact
+- guardianship
+    - n. 监护
+- audit
+    - vt. 审计
+    - n. 审计
+- belongings
+    - n. 所有物，东西
+    - All his **belongings** <ins>were burnt in the fire(付之一炬)</ins>.
+- immerse
+    - vt. 使专心于
+    - be immersed in sth.
+        - == absorb vt. 吸收；使并入；🙂 理解；吸引全部注意力；承受😔
+    - immerse oneself in sth.
+    - Their commitments do not permit them to **immerse** themselves in current affairs as fully as they might wish.
+- moralist
+    - n. 道德家
+- searing
+    - adj. （疼痛、热量等）强烈的
+- undercover
+    - adj. 秘密的
+    - == secret adj. 秘密的，机密的
+    - Officers had tailed the gang during a major **undercover** operation.
+- inheritor
+    - n. 继承人
+
 ## Words
 
 - violent
@@ -271,6 +208,9 @@
     - adj. 过于严格的；死板的
 - prosperous
     - adj. 繁荣的，兴旺的; 富裕的; 幸福的，运气好的; 良好的
+- correct
+    - vt. 改正，纠正
+    - adj. 正确的，对的
 
 ## 词组
 
