review: 007-012, Unit 19-1, Unit 20-2

--- a/math/advanced-mathematics/Limits-and-Continuity-of-Functions/Computation-of-Function-Limits.tex
+++ b/math/advanced-mathematics/Limits-and-Continuity-of-Functions/Computation-of-Function-Limits.tex
@@ -228,7 +228,7 @@
             \item 如果函数是有分母，则通分，将加减法变形为乘除法，以便使用其他计算工具（$\displaystyle\frac{0}{0}, \frac{\infty}{\infty}$）
             \item 如果函数中没有分母，则可以通过提取公因式或者做倒代换（创造分母再通分），出现分母后，再利用通分等恒等变形的方法，将加减法变形为乘除法
         \end{itemize}
-        \item $\infty^0, 0^0$: $\lim u^v = e^{\lim v\lim u}$
+        \item $\infty^0, 0^0$: $\lim u^v = \lim\{[1 + (u - 1)]^\displaystyle\frac{1}{u-1}^{(u-1)v} = e^{\lim v\lim u}$
         \item $1^\infty$: $\lim u^v = e^{\lim v(u - 1)}$
         \item 泰勒公式
     \end{enumerate}
