--- a/english/word/low-frequency/007-012.md
+++ b/english/word/low-frequency/007-012.md
@@ -25,51 +25,53 @@
     - decisive
         - adj. 决定性的; 明确的; 决断的
         - This is a time of **decisive** action and quick thinking.
-- agonizing
+- agonizing [ˈæɡəˌnaɪzɪŋ]
     - adj. 令人痛苦的
     - It was the most **agonizing** decision of her life.
-    - agony
+    - agony [ˈæɡəni]
         - n. 痛苦
         - == pain
 - livestream
     - n. 网络直播
-- tick
+- tick [tɪk]
     - vt. 打钩
-- shrewd
+- shrewd [ʃruːd]
     - adj. 精明的
-- veteran
+- veteran [ˈvetərən]
     - n. 老兵
-- irregular
+- irregular [ɪˈreɡjələr]
     - adj. 无规律的
-    - We never engage in **irregularities**. 我们决不搞歪的斜的
     - regularity n. 规律性
-- noisiness
+    - irregularity
+        - n. 不规则，无规律
+        - We never engage in **irregularities**. 我们决不搞歪的斜的
+- noisiness ['nɔɪzɪnɪs]
     - n. 吵闹
-- manifestation
+- manifestation [ˌmænɪfeˈsteɪʃn]
     - n. 表现
     - Some **manifestation** of your concern would have been appreciated.
 
 ## 008
 
 - perfection
-    - n. 完善
+    - n. 完善；完美
 - inbox
     - n. 收件箱
 - partial
     - adj. 部分的
-    - biased
+    - biased [ˈbaɪəst]
         - adj. 偏见的
         - unbiased 🙂 [ʌnˈbaɪəst] adj. 无偏见的；公正的
-    - partiality n. 不公平
-        - favoritism ['feɪvərɪtˌɪzəm] n. 偏袒
-    - impartially adv. 公平地
+    - partiality [ˌpɑrʃiˈæləti] n. 不公平
+    - favoritism ['feɪvərɪtˌɪzəm] n. 偏袒
+    - impartially [ˌɪmˌpɑʃəlɪ] adv. 公平地
 - inventor
     - n. 发明者
-- advisory
+- advisory [ədˈvaɪzəri]
     - adj. 顾问的
     - Giovanni Parmigiani, a biostatistician at the Harvard School of Public Health, a member of the SBoRE group, says
       he expects the board to "play primarily an **advisory** role".
-- consultant
+- consultant [kənˈsʌltənt]
     - n. 顾问
     - consultancy n. 咨询公司
 - multibillion
@@ -82,14 +84,15 @@
 - empathy
     - n. 同理心，共鸣，同情；感同身受
     - Besides, **empathy** can be a cure for loneliness and sadness.
+        - a cure for... 对...的良方/...的解药/治本之策
     - sympathy
         - n. 支持，赞同；同情
         - I have some **sympathy** with this <ins>point of view(观点)</ins>.
-- hedge
+- hedge [hedʒ]
     - vi. 防备（尤指金钱损失）
     - The Bilski case involves a claimed patent on a method for <ins>**hedging** risk(对冲风险)</ins> in the energy
       market.
-- suicide
+- suicide [ˈsuːɪsaɪd]
     - n. 自杀
     - commit suicide
 - quickness
@@ -97,11 +100,11 @@
 - entrepreneurship
     - n. 创业精神
     - **Entrepreneurship** has risks. Startups do fail.
-- erroneous
+- erroneous [ɪˈroʊniəs]
     - adj. （观念或资料）错误的
     - Proper measures were taken as soon as the **erroneous** ideas cropped up.
     - error n. 错误，差错
-- appropriately
+- appropriately [əˈprəʊpriətli]
     - adv. 适当的
     - == proper
 - unpredictable
@@ -113,35 +116,39 @@
 
 - unsustainability
     - n. 不可持续性
-    - In a world of scare resources, globalization without new technology is unsustainable.
+    - unsustainable
+        - adj. 不能持续的；无法维持的
+        - In a world of scare resources, globalization without new technology is **unsustainable**.
     - sustainable development 可持续发展
-- inability
+- inability [ˌɪnəˈbɪləti]
     - n. 无力
     - in inability to do sth. 无力做某事
-- fascination
+- fascination [ˌfæsɪˈneɪʃn]
     - n. 迷恋
-    - == obsession n. 迷恋 😔
-- scrap
+    - == obsession [əbˈseʃn] n. 迷恋 😔
+- scrap [skræp]
     - vt. 抛弃
     - n. 碎片
-- apt
-    - adj. 有...倾向
+- apt [æpt]
+    - adj. 有...倾向；聪明的、善于学习的
     - be apt to do 倾向于
         - == tend to do sth 倾向于做某事
         - == be likely to do sth.
     - She was **apt** to raise her voice and wave her hands about.
-    - She had taught him French and he had been an <ins>**apt**(adj. 聪慧的)</ins> students.
-- culprit
+    - She had taught him French, and he had been an <ins>**apt**(adj. 聪慧的)</ins> student.
+- culprit [ˈkʌlprɪt]
     - n. 引起问题的人（或事物）；罪犯
-    - The police followed home the clue and finally caught the **culprit**.
+    - The police followed the clue home and finally caught the **culprit**.
+        - clue [kluː] n. 线索，提示
+        - follow the clue home 顺着线索一路追查到源头（比喻用法）
     - Financial needs aren't the only **culprit/reason/cause** for the "unretirement" trend.
-- flexibly
+- flexibly [ˈfleksəbli]
     - adv. 灵活地
-- rectify
+- rectify [ˈrektɪfaɪ]
     - vt. 纠正
-- performative
+- performative [pərˈfɔrmətɪv]
     - adj. 表述行为的
-- explode
+- explode [ɪkˈsploʊd]
     - vi. 激增
 
 ## 011
@@ -149,9 +156,9 @@
 - distinctively
     - adv. 独特地
     - == unique
-- theorise
+- theorise ['θiəˌraɪz]
     - v. 提出理论
-    - theoretical adj. 理论上的
+    - theoretical [ˌθiːəˈretɪkl] adj. 理论上的
 - experimentation
     - n. 实验
 - disapprove
@@ -162,41 +169,45 @@
         - vt. 批准
 - duration
     - n. 持续时间
-- prudence
+- prudence [ˈprudəns]
     - n. 谨慎
     - consider the pros and cons.
     - **Prudence** is the virtue by which we discern what is proper to do under various circumstances in time and place.
+        - discern [dɪˈsɜːrn] vt. 了解；分辨
     - prudently adv. 谨慎地
 - needlessness
     - n. 不必要
-- ancestral
+- ancestral [ænˈsestrəl]
     - adj. 祖先的
     - ancestor n. 祖先
 
 ## 012
 
-- idealist
+- idealist [aɪˈdiəlɪst]
     - n. 理想主义者
     - ideally adv. 理想地
     - idealism
         - n. 理想主义
         - **Idealism** leads to realism if it is strictly thought out.
-    - When you're idealistic, you dream of perfection, whether in yourself or other people.
         - optimism n. 乐观主义
+    - idealistic
+        - adj. 理想主义的
+        - When you're **idealistic**, you dream of perfection, whether in yourself or other people.
+            - dream of 向往、憧憬
 - input
     - vt. 把（数据等）输入计算机
 - instability
     - n. （形势）不稳定
 - spacecraft
     - n. 宇宙飞船
-- continental
+- continental [ˌkɑːntɪˈnentl]
     - adj. 大陆的
 - unrecognized
     - adj. 未被意识到的
-    - The trend in sports,though, may be obscuring an **unrecognized** reality: Americans have generally stopped
+    - The trend in sports, though, may be obscuring an **unrecognized** reality: Americans have generally stopped
       growing.
-        - obscure adj. 鲜为人知的；费解的
-- instructive
+        - obscure [əbˈskjʊr] adj. 鲜为人知的；费解的
+- instructive [ɪnˈstrʌktɪv]
     - adj. 有启发性的
     - instruct sb. to do sth.
 - discoverer
