--- a/english/word/low-frequency/013-018.md
+++ b/english/word/low-frequency/013-018.md
@@ -23,50 +23,51 @@
     - adj. 不会引起争议的
 - collaboratively
     - adv. 合作地
-- unforeseen
+- unforeseen [ˌʌnfɔːrˈsiːn]
     - adj. 意外的
-    - Do you feel anxious when **unforeseen** incidents intrude on your day？
+    - Do you feel *anxious([ˈæŋkʃəs])* when **unforeseen** incidents *intrude([ɪnˈtruːd])* on your day？
 - competence
     - n. 能力；胜任
     - The judge has to act within the **competence** of the court.
     - incompetence n. 无能力
     - incompetent adj. 无能力的
-- clinical
+- clinical [ˈklɪnɪkl]
     - adj. 临床的
-- clergyman
+- clergyman [ˈklɜrdʒimən]
     - n. 牧师
 - enlightenment
     - n. 启蒙
     - An Answer to the Question: What is **Enlightenment**? It was the purpose and responsibility of great minds to go
-      forth and seek out the truth, which they believed to be founded In knowledge.
+      forth and seek out the truth, which they believed to be founded in knowledge.
     - enlighten v. 启发
-- plunge
+- plunge [plʌndʒ]
     - vi. 陷入
     - plunge into 使（某人或某物陷入）
 
 ## 014
 
-- mighty
+- mighty [ˈmaɪti]
     - adj. 强有力的
     - He who conquers others is strong; He who conquers himself is **mighty**.
+        - conquer [ˈkɑːŋkər] vt. 征服
     - might n. 力量
-- tuck
+- tuck [tʌk]
     - vt. 塞进
 - exclusion
     - n. 排斥
     - An **exclusion** is an instance of leaving something or some out.
-    - to the exclusion of
+    - to the exclusion of 以排除...为代价/把...完全排除在外/只顾...而不顾...（只包括前者，不包括后者）
     - If you love someone <ins>to the **exclusion** of</ins> all others, he or she is the only one for you!
-    - Dine had dedicated her life to caring for him <ins>to the **exclusion** of</ins> all else.
+    - Dine had *dedicated(vt. 把...奉献给)* her life to caring for him <ins>to the **exclusion** of</ins> all else.
     - exclusionary adj. 排他的
     - inclusive adj. 包容性强的；包括的
-- deter
+- deter [dɪˈtɜːr]
     - vt. 制止
-- extraction
+- extraction [ɪkˈstrækʃn]
     - n. 血统；取出；提炼
 - depiction
     - n. 描写
-- erect
+- erect [ɪˈrekt]
     - vt. 建立
 - intently
     - adv. 专心地
@@ -76,9 +77,9 @@
 
 ## 015
 
-- finalise
+- finalise [ˈfaɪnəˌlaɪz]
     - vt. 最终确定（计划、协议等）
-- scold
+- scold [skoʊld]
     - vt. 责骂
     - In the 2006 film version of The Devil Wears Prada, Miranda Priestly, played by Meryl Streep, **scolds** her
       unattractive assistant for imagining that high fashion doesn't affect her.
@@ -87,25 +88,25 @@
     - blame
         - vt. 把...归咎于
         - n. （坏事或错事）的责任
-- personalised
+- personalized [ˈpɜrsənəlaɪzd]
     - adj. 个人化的
-- silliness
+- silliness ['sɪlɪnəs]
     - n. 愚蠢
     - silly [ˈsɪli] adj. 傻的，糊涂的
-- penalise
+- penalise ['pinəlaɪz]
     - vt. 惩罚
-    - penalty n. 惩罚；刑罚
-- complimentary
+    - penalty [ˈpenəlti] n. 惩罚；刑罚
+- complimentary [ˌkɑːmplɪˈmentri]
     - adj. 赞赏的
     - == favorable adj. 赞同的
     - compliment n. 称赞
-- massacre
+- massacre [ˈmæsəkər]
     - n. 大屠杀，（比赛中的）惨败😔
-- sphere
+- sphere [sfɪr]
     - n. 领域
 - brainstorm
     - v. 头脑风暴讨论
-- orchestral
+- orchestral [ɔrˈkestrəl]
     - adj. 管弦乐的
 
 ## 016
@@ -115,12 +116,12 @@
     - unsuitable
         - adj. 不合适的
         - The *rides(游乐园的游乐设施)* are **unsuitable** for people of a *nervous(adj. 焦虑的)* disposition.
-- subordinate
+- subordinate [səˈbɔːrdɪneɪt]
     - n. 下级
     - adj. 次要的；下级的
-- counsellor
+- counsellor [ˈkaʊnsəlɚ]
     - n. 顾问
-    - counsel
+    - counsel [ˈkaʊnsl]
         - vt. （正式）建议
         - Trade publications **counselled/advised** department stores that, in order to increase sales, they should
           create a "third stepping stone" between infant wear and older kids' clothes.
@@ -139,19 +140,20 @@
 - precise
     - adj. 精确的
     - == exact adj. 精确的，准确的
-- stereotyped
+- stereotyped [ˈstɛriəˌtaɪpt]
     - adj. 固定不变的
     - a stereotyped mind 刻板的思想
-    - There is a sameness about all these tales，they're so **stereotyped**—all about
+    - There is a sameness about all these tales; they're so **stereotyped**—all about
       <ins>talented scholars and lovely ladies(才子佳人)</ins>. 这些书就是一套子，左不过是写才子佳人，最没趣儿
+        - tale [teɪl] n. 叙述的故事，尤指带有传统、传奇或虚构色彩的故事
 - worrisome
     - adj. 令人担心的
 - lawless
     - adj. 不守法的
     - lawmaker n. 立法者
-- denote
+- denote [dɪˈnoʊt]
     - vt. 意指
-- modernism
+- modernism [ˈmɑdərnɪzəm]
     - n. 现代主义
     - modernization n. 现代化
 - unresponsive
@@ -168,34 +170,40 @@
 
 ## 018
 
-- anecdote
+- anecdote [ˈænɪkdoʊt]
     - n. 轶事
     - This research is based on **anecdote** not fact.
-    - anecdotal adj. 传闻的
+    - anecdotal
+        - adj. 传闻的
         - Opposite: fact
-- guardianship
+- guardianship [ˈgɑrdiənʃɪp]
     - n. 监护
-- audit
+- audit [ˈɔːdɪt]
     - vt. 审计
     - n. 审计
-- belongings
+- belongings [bɪˈlɔːŋɪŋz]
     - n. 所有物，东西
-    - All his **belongings** <ins>were burnt in the fire(付之一炬)</ins>.
-- immerse
+    - All his **belongings** <ins>were *burnt([bɜrnt])* in the fire(付之一炬)</ins>.
+- immerse [ɪˈmɜːrs]
     - vt. 使专心于
-    - be immersed in sth.
+    - be immersed in sth. 沉浸于.../全身心投入...
         - == absorb vt. 吸收；使并入；🙂 理解；吸引全部注意力；承受😔
-    - immerse oneself in sth.
-    - Their commitments do not permit them to **immerse** themselves in current affairs as fully as they might wish.
-- moralist
+    - immerse oneself in sth. 使自己沉浸于.../全身心投入...
+    - Their commitments do not *permit([pərˈmɪt] v. 允许)* them to **immerse** themselves in current affairs as fully as
+      they might wish.
+        - current affairs 时事、时政
+- moralist [ˈmɔrəlɪst]
     - n. 道德家
-- searing
+- searing [ˈsɪrɪŋ]
     - adj. （疼痛、热量等）强烈的
 - undercover
     - adj. 秘密的
-    - == secret adj. 秘密的，机密的
+    - == secret [ˈsiːkrət] adj. 秘密的，机密的
     - Officers had tailed the gang during a major **undercover** operation.
-- inheritor
+        - tail v. 秘密跟踪、尾随
+        - gang [ɡæŋ] n. 一伙人；帮派；团伙
+            - a gang 犯罪团伙
+- inheritor [ɪnˈherɪtər]
     - n. 继承人
 
 ## Words
@@ -206,7 +214,7 @@
     - adj. 唯一的，仅有的
 - rigid [ˈrɪdʒɪd]
     - adj. 过于严格的；死板的
-- prosperous
+- prosperous [ˈprɑːspərəs]
     - adj. 繁荣的，兴旺的; 富裕的; 幸福的，运气好的; 良好的
 - correct
     - vt. 改正，纠正
