--- a/english/word/low-frequency/019-024.md
+++ b/english/word/low-frequency/019-024.md
@@ -19,32 +19,35 @@
 
 ## 019
 
-- discernible
+- discernible [dɪˈsɜːrnəbl]
     - adj. 可辨别的
-    - == observable
-    - His face was barely discernible in the gloom.
-    - discern 观察
+    - == observable adj. 能观察到的
+    - His face was barely **discernible** in the gloom.
+        - barely adv. 几乎不
+    - discern v. 察觉出，了解; 分辨出
 - traceable
     - adj. 可追踪的
 - imperative
-    - n. 重要紧急的事
+    - n. 重要紧急的事；当务之急
+    - adj.
     - == important
-    - It is absolutely <ins>imperative (当务之急)</ins> that we finish by next week.
+    - It is absolutely **imperative** that we finish by next week.
 - anchor
     - n. 节目主持人
 - unthinkingly
-    - adv. 不假思索的
+    - adv. 不假思索地
 - bidder
     - n. 投标者
 - bitter
     - adj. 苦的
-    - Bad times can make you bitter or better.
+    - Bad times can make you **bitter** or better.
 - directive
     - adj. 指示的
 - repel
     - vt. 使厌恶；驱逐
-- moan
-    - v./n. 抱怨😔
+- moan 😔
+    - v. 抱怨
+    - n. 抱怨
 
 ## 020
 
@@ -55,9 +58,11 @@
     - n. 不灵敏
 - affirmation
     - n. 肯定
-    - affirm 确定，肯定
-    - reaffirm vt. 重申
+    - affirm vt. 肯定属实；申明
+    - reaffirm
+        - vt. 重申
         - == restate
+    - skepticism [ˈskɛptɪˌsɪzəm] n. 怀疑主义；怀疑态度 😔
 - neurology
     - n. 神经病学，神经学
     - neuroligist n. 神经病学家，神经学家
@@ -65,7 +70,7 @@
 - unaffected
     - adj. 未受影响的
 - empower
-    - vt. 授权
+    - vt. 授权；使能够
     - empower your life
     - empowerment n. 授权
 
@@ -73,13 +78,15 @@
 
 - intentional
     - adj. 故意的
-- prominence
+- prominence [ˈprɑːmɪnəns]
     - n. 出名
-    - == importance
+    - == importance n. 重要性
 - communist
     - adj. 共产主义的
     - class struggles 阶级斗争
-    - The site of the First National Congress of the Communist Party of China is located at No.76,Xingye Rode in Shanghai,a typical Shanghai-style residence built in the autumn of 1920. 中国共产党第一次全国代表大会会址位于上海兴业路76号，是一栋典型的上海式住宅，建于1920年秋。
+    - The site of the First National Congress of the <ins>**Communist** Party of China</ins> is located at No.76, Xingye
+      Rode in Shanghai,a typical Shanghai-style residence built in the autumn of 1920.
+      中国共产党第一次全国代表大会会址位于上海兴业路76号，是一栋典型的上海式住宅，建于1920年秋。
 - logicality
     - n. 逻辑性
     - logician n. 逻辑学家
@@ -91,11 +98,15 @@
     - vt. 稀释
 - miserably
     - adv. 贫困地
-    - miserable 悲惨的
+    - miserable adj. 痛苦的；令人不快的
 - outrage
+    - vt. 愤怒
     - n. 愤怒
     - ...provoked justified **outrage** in Vermont last week when it announced it was dishonoring a longstanding
       commitment.
+    - Do not go gentle into that good night, Old age should burn and rave at close of day; **Rage**, **rage** against
+      the dying of the light. — 狄兰·托马斯（Dylan Thomas）《Do not go gentle into that good night》
+      不要温顺地走向死亡。人在生命将尽之时，仍应燃烧、呐喊，而非安静接受。愤怒吧，愤怒地反抗生命之光的消逝。
 
 ## 022
 
@@ -103,6 +114,8 @@
     - vt. 撰写
 - composite
     - n. 合成物
+- donation
+    - n. 捐赠物
 - commonplaceness
     - n. 平常的事
 - endurance
@@ -131,11 +144,12 @@
     - adv. 匆忙地
 - blossom
     - vi. 成功发展
-    - == flourish
+    - == flourish [ˈflɜːrɪʃ] vi. 繁荣，兴旺；茁壮成长
 - imaginable
     - adj. 可想象的
 - advancement
     - n. 发展
+    - == development n. 发展；开发
     - with the advancement/development of
 - numerous
     - adj. 许多的
@@ -144,8 +158,9 @@
     - adv. 最好是
 - crystallise/crystallize
     - v. 使明确
-    - crystal 钻石
-        - It is clear/crystal-clear that 如钻石般清晰
+    - crystal [ˈkrɪstl]
+        - n. 结晶，晶体; 水晶（玻璃）；钻石
+        - It is clear/crystal-clear that... 如钻石般清晰
 
 ## 024
 
@@ -161,8 +176,9 @@
     - n. 养分
 - breathe
     - v. 呼吸
-    - breath n. 呼吸
-        - take a breath 深呼吸
+    - breath
+        - n. 呼吸
+        - take a deep breath 深呼吸
 - sew
     - v. 缝
 - reproductive
@@ -173,3 +189,19 @@
     - v. 鼓动
 - disposable
     - adj. 一次性的
+
+## Words
+
+- despise
+    - vt. 鄙视
+- reserve
+    - vt. 保留；预定
+    - n. ...保护区；...储备量
+- rescale
+- hindrance
+- resemblance
+
+## 词组
+
+## 句式
+
