--- a/english/word/low-frequency/033-040.md
+++ b/english/word/low-frequency/033-040.md
@@ -148,7 +148,7 @@
     - vt. 经历
 - scary
     - adj. （事物）可怕的
-- conquer
+- conquer [ˈkɑːŋkər]
     - vt. 征服
     - == overcome/defeat
     - He who **conquers** others is strong; He who **conquers** himself is mighty.
