--- a/english/word/low-frequency/057-064.md
+++ b/english/word/low-frequency/057-064.md
@@ -112,11 +112,11 @@
 - unaccountably
     - adv. 无法解释地
     - He has been unaccountably delayed.
-- intrude
+- intrude [ɪnˈtruːd]
     - vi. 侵扰
     - intrude on 侵犯
     - intrude on the federal's privileged powers 侵犯联邦政府的特权
-    - Do you feel anxious when unforeseen incidents intrude on your day？
+    - Do you feel anxious when unforeseen incidents **intrude** on your day？
     - intrusion n. 侵占
     - intrusive adj. 烦扰的
     - intrusiveness n. 侵扰性
