--- a/math/advanced-mathematics/Foundations/inequality.tex
+++ b/math/advanced-mathematics/Foundations/inequality.tex
@@ -121,7 +121,33 @@
         \]
         注: $\color{red}{(a_1^2 + a_2^2)(b_1^2 + b_2^2) \geq (a_{1}b_{1} + a_2 b_2)^2}$
         \item Bernoulli（伯努利）不等式: $(1+x)^n \ge 1 + nx, x > -1$
+        \item 若 $0 < a < x < b, 0 < c < y < d$，则$\displaystyle\frac{c}{b} < \frac{y}{x} < \frac{d}{a}$
+        \item $\sin x < x < \tan x,\quad x \in \left(0,\displaystyle\frac{\pi}{2}\right)$
+        \item $\sin x < x, \quad x > 0$
+        \item 当 $0 < x < \displaystyle\frac{\pi}{4}$时，$x < \tan x < \displaystyle\frac{4}{\pi}x$
+        \item 当 $0 < x < \displaystyle\frac{\pi}{2}$时，$\sin x > \displaystyle\frac{2}{\pi}x$
+        \item $\arctan x \leq x \leq \arcsin x, \quad 0 \leq x \leq 1$
+        \item $e^x \geq x + 1, \quad x\text{为任意值}$
+        \item $x - 1 \geq \ln x, \quad x > 0$
         \item
+        \[
+            \frac{1}{1+x}
+            <
+            \ln\!\left(1+\frac{1}{x}\right)
+            <
+            \frac{1}{x},
+            \quad x>0,
+        \]
+        或等价地，
+        \[
+            \frac{x}{1+x}
+            \le
+            \ln(1+x)
+            \le
+            x,
+            \quad x>0.
+        \]
+
 
     \end{enumerate}
 
