--- a/math/advanced-mathematics/Limits-and-Continuity-of-Functions/Concept-and-Properties-of-Function-Limits.tex
+++ b/math/advanced-mathematics/Limits-and-Continuity-of-Functions/Concept-and-Properties-of-Function-Limits.tex
@@ -253,7 +253,7 @@
         \item $\displaystyle \lim_{x\to x_0}\frac{\alpha(x)}{\beta(x)}=1$，
         则 $\alpha(x)\sim\beta(x)$，称为等价无穷小，记为$\alpha(x) \sim \beta(x)$
         \item 有界函数与无穷小的乘积是无穷小
-        \item 当 $x \to 0$ 时，常用的等价无穷小
+        \item 当 $\color{red}{x \to 0}$ 时，常用的等价无穷小
         \begin{itemize}
             \item $x \sim \sin x$
             \item $x \sim \tan x$
