--- a/math/latex/template.tex
+++ b/math/latex/template.tex
@@ -12,6 +12,7 @@
 \usepackage{tcolorbox}
 \usepackage{xstring}
 \usepackage{pgfplots}
+\usepackage{enumitem}
 \pgfplotsset{compat=1.18}
 \geometry{left=3cm,right=3cm,top=3cm,bottom=3cm}
 
