--- a/english/word/low-frequency/001-006.md
+++ b/english/word/low-frequency/001-006.md
@@ -148,7 +148,7 @@
 - occasional [əˈkeɪʒənl]
     - adj. 偶然的
     - == from time to time
-    - I enjoy the **occasional** glass of wine.
+    - I enjoy the **occasional** glass of *wine([waɪn] n. 葡萄酒)*.
 - multidimensional
     - adj. 多维的
 - stubbornly [ˈstʌbɚnɪ]
