--- a/english/word/low-frequency/007-012.md
+++ b/english/word/low-frequency/007-012.md
@@ -41,10 +41,10 @@
     - n. 老兵
 - irregular [ɪˈreɡjələr]
     - adj. 无规律的
-    - regularity n. 规律性
+    - regularity [ˌrɛɡjəˈlærətɪ] n. 规律性
     - irregularity
         - n. 不规则，无规律
-        - We never engage in **irregularities**. 我们决不搞歪的斜的
+        - We never *engage([ɪnˈɡeɪdʒ] vi. 参与，从事)* in **irregularities**. 我们决不搞歪的斜的
 - noisiness ['nɔɪzɪnɪs]
     - n. 吵闹
 - manifestation [ˌmænɪfeˈsteɪʃn]
@@ -59,12 +59,12 @@
     - n. 收件箱
 - partial
     - adj. 部分的
+    - partiality [ˌpɑrʃiˈæləti] n. 不公平
+    - impartially [ˌɪmˌpɑʃəlɪ] adv. 公平地
     - biased [ˈbaɪəst]
         - adj. 偏见的
         - unbiased 🙂 [ʌnˈbaɪəst] adj. 无偏见的；公正的
-    - partiality [ˌpɑrʃiˈæləti] n. 不公平
     - favoritism ['feɪvərɪtˌɪzəm] n. 偏袒
-    - impartially [ˌɪmˌpɑʃəlɪ] adv. 公平地
 - inventor
     - n. 发明者
 - advisory [ədˈvaɪzəri]
@@ -106,7 +106,7 @@
     - error n. 错误，差错
 - appropriately [əˈprəʊpriətli]
     - adv. 适当的
-    - == proper
+    - == properly adv. 恰当地
 - unpredictable
     - adj. 不可预测的
 - wherever
@@ -130,12 +130,12 @@
     - vt. 抛弃
     - n. 碎片
 - apt [æpt]
-    - adj. 有...倾向；聪明的、善于学习的
+    - adj. 有...倾向；聪明的、善于学习的、聪慧的
     - be apt to do 倾向于
         - == tend to do sth 倾向于做某事
         - == be likely to do sth.
     - She was **apt** to raise her voice and wave her hands about.
-    - She had taught him French, and he had been an <ins>**apt**(adj. 聪慧的)</ins> student.
+    - She had taught him French, and he had been an **apt** student.
 - culprit [ˈkʌlprɪt]
     - n. 引起问题的人（或事物）；罪犯
     - The police followed the clue home and finally caught the **culprit**.
@@ -192,7 +192,7 @@
         - optimism n. 乐观主义
     - idealistic
         - adj. 理想主义的
-        - When you're **idealistic**, you dream of perfection, whether in yourself or other people.
+        - When you're **idealistic**, you <ins>dream of</ins> perfection, whether in yourself or other people.
             - dream of 向往、憧憬
 - input
     - vt. 把（数据等）输入计算机
