--- a/english/word/low-frequency/025-030.md
+++ b/english/word/low-frequency/025-030.md
@@ -1,4 +1,4 @@
-# 025-032
+# 025-030
 
 - 感情色彩正向: 🙂
 - 感情色彩负向: 😔
@@ -22,36 +22,45 @@
 - disposal
     - n. 处理
     - trash disposal 废物处理
+    - garbage disposal 垃圾处理
 - filer
     - n. 提起诉讼者
 - visionary
     - n. 有远见卓识的人
+    - A spirit with a vision is a dream with a mission.
 - implicitly
     - adv. 含蓄的
-    - implicit adj. 间接的，含糊的
-        - == indirect
-        - explicit adj. 直接的，清晰的
-        - You might think you and your boyfriend might have an implicit understanding that you are going to get
-          married，but it's probably better to talk it through.
+    - implicit
+        - adj. 不直接言明的；内含的
+        - == indirect == unclear
+        - You might think you and your boyfriend might have an **implicit** understanding that you are going to get
+          married, but it's probably better to talk it through.
+        - explicit
+            - adj. 明确的
+            - he gave me very **explicit** directions on how to get there.
 - reliability
     - n. 可靠性
     - unreliability n. 不可靠性
 - simplification
     - n. 简化
-    - simplify v. 简化
-    - simple adj.简单的
+    - simplify v. 使简单化
+    - simple adj. 简单的; 单纯的; 朴素的
 - interviewee
     - n. 参加面试者
-    - The question was vague，giving the interviewee enough rope to hang herself. 这个问题模棱两可，让面试者胡乱发挥而自毙吧。
+    - The question was vague, giving the **interviewee** enough rope to hang herself. 这个问题模棱两可，让面试者胡乱发挥而自毙吧。
     - -ee 被动
-        - employee 员工
+        - employee n. 雇员
     - -er 主动
-        - employer 雇主
-        - interviewer 面试官
-    - interview v. 面试
-- blodness
+        - employer n. 雇主
+        - interviewer n. 面试者；采访者
+    - interview
+        - vt. 采访
+        - n. 面试；采访
+- boldness
     - n. 勇气
-    - Boldness — a willingness to extend yourself to the extreme，is not one that can be acquired overnight.
+    - Be bold, be courageous, be your best.
+        - bold == courageous == brave
+    - **Boldness** — a willingness to extend yourself to the extreme, is not one that can be acquired overnight.
 
 ## 026
 
@@ -59,17 +68,18 @@
     - vi. 同时执行多项任务
 - bestseller
     - n. 畅销书
+    - bestselling adj. 畅销的
 - purposelessness
     - n. 无目的
 - downgrade
     - vt. 贬低
 - vacancy
     - n. （职位）空缺
-    - The vacancy has already been filled.
+    - The **vacancy** has already been filled.
 - intimidate
     - vt. 威胁
     - == threaten
-    - You have no right to intimidate this man，Alison continued.
+    - "You have no right to **intimidate** this man", Alison continued.
     - intimidation n. 恐吓
 - therapy
     - n. 治疗
@@ -79,13 +89,15 @@
 
 - terrific
     - adj. 极好的
-    - We had a terrific start to the season，but recently we've been inconsistent.
+    - terrible - adj. **糟糕的**；极度的；可怕的
+    - We had a **terrific** start to the season, but recently we've been inconsistent.
 - disassemble
     - vt. 拆卸
+    - assemble v. 集合；收集
 - beam
     - vi. 绽放笑容
     - beaming + n.（face/smile/eyes）
-    - With beaming eyes,the child looked at the kind gentleman who had always been so good to her.
+    - With **beaming** eyes,the child looked at the kind gentleman who had always been so good to her.
 - strip
     - vt. 剥去
 - meaningfully
@@ -93,16 +105,16 @@
     - meaningless adj. 无价值的
 - cruise
     - vi. 巡航
-- unfeaible
+- unfeasible
     - adj. 不可行的
-    - The weather made it unfeasible to be outdoors.
+    - The weather made it **unfeasible** to be outdoors.
     - feasible adj. 可行的
 - scenery
     - n. 风景
 - attributable
     - adj. 可归因于...的
     - be attributable to 可归因于；可能由于
-    - Their illnesses are attributable to a poor diet.
+    - Their illnesses are **attributable** to a poor diet.
     - attribute to 归因于
 
 ## 028
@@ -110,7 +122,7 @@
 - toil
     - vi. （长时间）苦干
     - hardwork
-    - I have nothing to offer but blood，toil，tears and sweat.
+    - I have nothing to offer but blood, toil, tears and sweat.
 - administrator
     - n. 管理人员
 - lodging
@@ -118,7 +130,7 @@
 - cherish
     - vt. 珍惜
     - == value
-    - Many people search for love without success，so If you have found it,then cherish it and count yourself lucky.
+    - Many people search for love without success, so If you have found it,then cherish it and count yourself lucky.
 - mindless
     - adj. 无头脑的
     - == foolish
@@ -186,62 +198,10 @@
         - The crash of EgyptAir Flight 804, which **terrorists** may have downed over the Mediterranean Sea, provides
           another *tragic([ˈtrædʒɪk] adj. 悲惨的)* reminder of why.
 
-## 031
+## Words
 
-- lump
-    - vt. 把...归在一起
-- persistently
-    - adv. 坚持地
-- wrap
-    - v. 包
-    - wrap up
-    - NATO defense ministers wrap up their meeting in Brussels today.
-- embark
-    - v. 着手
-    - embark on 从事
-    - Some forethought and preparation is necessary before you embark on the project.
-- manual
-    - n. 小册子
-- stir
-    - n. 愤怒（情绪）
-    - I've found quite a few,and — since I started posting them on Twitter — they have been causing quite a stir
-- transferable
-    - adj. 可转移的
-- expectancy
-    - n. 预期
-- plea
-    - n. 恳求
-- dissolve
-    - v. 使溶解
+- exaggerated
 
-## 032
+## 词组
 
-- irrelevant
-    - adj. 无关紧要的
-- privately
-    - adv. 私下的
-- vicious 😔
-    - adj. 恶性的
-- endorse 🙂
-    - vt. (正式)赞同
-    - I wholeheartedly endorse his remarks.
-- cloak
-    - vt. 掩盖
-    - They left under the clock of darkness.
-- electronically
-    - adv. 用电子方法
-- generalist
-    - n. 通才（各个领域都会）
-    - In this age of generalists，it pays to have specific knowledge or skills.
-    - specialist 特长
-- digitalized
-    - adj. 数字化的
-- forecaster
-    - n. 预测者
-- descend
-    - v. 下来
-        - fall
-        - decrease
-    - ascend 上升
-        - rise
-        - increase
+## 句式
