--- a/english/word/low-frequency/025-030.md
+++ b/english/word/low-frequency/025-030.md
@@ -121,8 +121,8 @@
 
 - toil
     - vi. （长时间）苦干
-    - hardwork
-    - I have nothing to offer but blood, toil, tears and sweat.
+    - == hardwork
+    - I have nothing to offer but blood, **toil**, tears and sweat.
 - administrator
     - n. 管理人员
 - lodging
@@ -130,16 +130,20 @@
 - cherish
     - vt. 珍惜
     - == value
-    - Many people search for love without success, so If you have found it,then cherish it and count yourself lucky.
+    - **Cherish** every moment with those you love at every stage of your journey.
+    - Many people search for love without success, so if you have found it, then **cherish** it and count yourself
+      lucky.
 - mindless
     - adj. 无头脑的
-    - == foolish
+    - == foolish adj. 愚蠢的；荒谬的
 - illuminate
-    - vt. 阐明
-    - == clarification
-        - clarify v. 阐明
+    - vt. 阐明；照亮
+    - illumination
+        - n. 阐明
+        - == clarification [ˌklærəfəˈkeʃən] n. 阐明，澄清
+            - clarify v. 阐明
     - Yet its report may well set back reform by obscuring the depth and breath of the challenge that Congress asked it
-      to illuminate.
+      to **illuminate**.
 - uncontrolled
     - adj. 不受控制的
     - controllable adj. 可控制的
@@ -151,8 +155,8 @@
 
 - permeate
     - v. 弥漫
-    - Water will easily permeate a cotton dress.
-    - Statistics permeate modern life.
+    - Water will easily **permeate** a cotton dress.
+    - Statistics **permeate** modern life.
 - grader
     - n. ...年级的学生
 - appraisal
@@ -160,16 +164,16 @@
     - staff appraisal 员工评估体系
 - emigrant
     - n. 移民
-    - emigration n. 移民（进）
-    - immigrant n. 移民（外）
+    - emigration n. 移民（进，相较于本国）
+    - immigrant n. 移民（外，相较于本国）
 - mixture
     - n. 混合
 - theft
     - n. 盗窃罪
 - striking
     - adj. 引人注目的
-    - Striking workers halted production at the auto plant yesterday.
-    - He was very striking but in some way Ifelt <ins>repelled (反感)</ins>.
+    - **Striking** workers halted production at the auto plant yesterday.
+    - He was very **striking** but in some way I felt *repelled(v. 使厌恶; 排斥)*.
 - rediscover
     - vt. 重新发现
 - giggle
@@ -182,17 +186,18 @@
 - investigator
     - n. 调查者
 - runaway
-    - n. 迅猛发展而难以控制的
+    - // TODO n. 迅猛发展而难以控制的；逃跑
 - wilderness
     - n. 荒野
 - spectacle
-    - n. 眼镜
+    - n. [pl.]眼镜；奇观；精彩的表演
 - intellectualise/intellectualize
     - 使理智化
 - applaud
     - vt. 称赞
 - terror
     - n. 恐怖主义
+    - terrorism n 恐怖主义
     - terrorist
         - n. 恐怖主义者
         - The crash of EgyptAir Flight 804, which **terrorists** may have downed over the Mediterranean Sea, provides
@@ -201,6 +206,11 @@
 ## Words
 
 - exaggerated
+    - adj. 夸大的，言过其实的; 过大的，逾常的
+- timid
+    - adj. 胆小的; 羞怯的; 怕人; 羞手羞脚
+- liquidity
+    - n. 流动性; 流动资金; 资产流动性
 
 ## 词组
 
